--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
         game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
-        game.load.spritesheet('humman1', '/game_sales/resurs/hummen_sprite.png', 40,40);
+        game.load.spritesheet('humman', '/game_sales/resurs/hummen_sprite.png', 40,40);
 
     }
 
     var player;
-    var player2;
     var platforms;
     var cursors;
 
@@ -62,31 +61,19 @@
         ledge.body.immovable = true;
 
         // The player and its settings
-        player = game.add.sprite(32, game.world.height - 150, 'dude');
-
-        player2 = game.add.sprite(200, game.world.height - 250, 'humman1');
+        player = game.add.sprite(32, game.world.height - 150, 'humman');
 
         //  We need to enable physics on the player
         game.physics.arcade.enable(player);
-        game.physics.arcade.enable(player2);
 
         //  Player physics properties. Give the little guy a slight bounce.
         player.body.bounce.y = 0.2;
         player.body.gravity.y = 300;
         player.body.collideWorldBounds = true;
 
-        //  Player physics properties. Give the little guy a slight bounce.
-        player2.body.bounce.y = 0.2;
-        player2.body.gravity.y = 300;
-        player2.body.collideWorldBounds = true;
-
         //  Our two animations, walking left and right.
         player.animations.add('left', [0, 1, 2, 3], 10, true);
         player.animations.add('right', [5, 6, 7, 8], 10, true);
-
-        //  Our two animations, walking left and right.
-        player2.animations.add('left', [0, 1, 2, 3], 10, true);
-        player2.animations.add('right', [5, 6, 7, 8], 10, true);
 
         //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
@@ -95,45 +82,16 @@
     function update() {
 
         //  Collide the player and the stars with the platforms
-        //game.physics.arcade.collide(player, platforms);
-        //game.physics.arcade.collide(player2, platforms);
+        game.physics.arcade.collide(player, platforms);
 
         game.input.keyboard.onUpCallback = function (e) {
             // These can be checked against Phaser.Keyboard.UP, for example.
             console.log(e.keyCode);
-            console.log(cursors);
 
-            if (e.keyCode === 65) //a
-            {
-                player2.body.velocity.x = -150;
-                player2.animations.play('left');
-            }
-            /*if (e.keyCode === 87) //w
-            {
-                player2.body.velocity.y = -350;
-            }
-            if (e.keyCode === 83) //s
-            {
-                player2.body.velocity.y = +50;
-            }
-            if (e.keyCode === 68) //d
-            {
-                player2.body.velocity.x = +150;
-                player2.animations.play('right');
-            }*/
         };
 
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
-        player2.body.velocity.x = 0;
-
-       /* if (cursors.)
-        {
-            //  Move to the left
-            player2.body.velocity.x = -150;
-
-            player2.animations.play('left');
-        }*/
 
         if (cursors.left.isDown)
         {
@@ -161,11 +119,6 @@
         if (cursors.up.isDown && player.body.touching.down)
         {
             player.body.velocity.y = -350;
-        }
-        //  Allow the player to jump if they are touching the ground.
-        if (cursors.up.isDown && player2.body.touching.down)
-        {
-            player2.body.velocity.y = -350;
         }
     }
 
