--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
 
 <script type="text/javascript">
 
-    var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+    var game = new Phaser.Game(800, 600, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
 
     function preload() {
-
+        /*game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+        game.scale.pageAlignHorizontally = true;
+        game.scale.pageAlignVertically = true;
+*/
         game.load.image('sky', 'assets/sky.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
-        game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
-        game.load.spritesheet('humman', '/game_sales/resurs/hummen_sprite.png', 40,40);
+        game.load.spritesheet('humman', './resurs/hummen_go3.png', 37,38);
 
     }
 
-    var player;
-    var platforms;
-    var cursors;
+    let player;
+    let platforms;
+    let cursors;
 
     function create ()
     {
@@ -45,7 +47,7 @@
         platforms.enableBody = true;
 
         // Here we create the ground.
-        var ground = platforms.create(0, game.world.height - 64, 'ground');
+        let ground = platforms.create(0, game.world.height - 64, 'ground');
 
         //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
         ground.scale.setTo(2, 2);
@@ -54,7 +56,7 @@
         ground.body.immovable = true;
 
         //  Now let's create two ledges
-        var ledge = platforms.create(400, 400, 'ground');
+        let ledge = platforms.create(400, 400, 'ground');
         ledge.body.immovable = true;
 
         ledge = platforms.create(-150, 250, 'ground');
@@ -62,6 +64,7 @@
 
         // The player and its settings
         player = game.add.sprite(32, game.world.height - 150, 'humman');
+        //player.scale.x = -1;
 
         //  We need to enable physics on the player
         game.physics.arcade.enable(player);
@@ -72,8 +75,9 @@
         player.body.collideWorldBounds = true;
 
         //  Our two animations, walking left and right.
-        player.animations.add('left', [0, 1, 2, 3], 10, true);
-        player.animations.add('right', [5, 6, 7, 8], 10, true);
+        player.animations.add('left', [6, 15, 24, 33, 42], 8, true);
+        player.animations.add('right', [2, 11, 20, 29, 38], 8, true);
+        player.animations.add('top', [0, 7, 13, 19], 9, true);
 
         //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
@@ -111,14 +115,15 @@
         {
             //  Stand still
             player.animations.stop();
-
             player.frame = 4;
-        }
 
+        }
         //  Allow the player to jump if they are touching the ground.
+
         if (cursors.up.isDown && player.body.touching.down)
         {
             player.body.velocity.y = -350;
+            player.animations.play('top');
         }
     }
 
