--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Phaser - Making your first game, part 3</title>
+    <title>my game Phaser</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <link rel="shortcut icon" href="quest.png" type="image/x-icon"/>
     <script src="phaser2.2.min.js"></script>
     <style type="text/css">
         body {
@@ -14,13 +16,27 @@
 
 <script type="text/javascript">
 
-    var game = new Phaser.Game(800, 600, Phaser.CANVAS, '', { preload: preload, create: create, update: update });
+    let config = {
+        type: Phaser.CANVAS,
+        width: 800,
+        height: 600,
+        parent: 'phaser-example',
+        physics: {
+            default: 'arcade',
+            arcade: {
+                debug: true
+            }
+        },
+        player_speed: 150
+    };
+
+    let game = new Phaser.Game(config.width, config.height, config.type, '', { preload: preload, create: create, update: update });
 
     function preload() {
-        /*game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+        game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
         game.scale.pageAlignHorizontally = true;
         game.scale.pageAlignVertically = true;
-*/
+
         game.load.image('sky', 'assets/sky.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
@@ -34,82 +50,64 @@
 
     function create ()
     {
-        //  We're going to be using physics, so enable the Arcade Physics system
-        game.physics.startSystem(Phaser.Physics.ARCADE);
 
         //  A simple background for our game
         game.add.sprite(0, 0, 'sky');
 
-        //  The platforms group contains the ground and the 2 ledges we can jump on
-        platforms = game.add.group();
-
-        //  We will enable physics for any object that is created in this group
-        platforms.enableBody = true;
-
-        // Here we create the ground.
-        let ground = platforms.create(0, game.world.height - 64, 'ground');
-
-        //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-        ground.scale.setTo(2, 2);
-
-        //  This stops it from falling away when you jump on it
-        ground.body.immovable = true;
-
-        //  Now let's create two ledges
-        let ledge = platforms.create(400, 400, 'ground');
-        ledge.body.immovable = true;
-
-        ledge = platforms.create(-150, 250, 'ground');
-        ledge.body.immovable = true;
-
         // The player and its settings
-        player = game.add.sprite(32, game.world.height - 150, 'humman');
-        //player.scale.x = -1;
+        player = game.add.sprite(32, 32, 'humman');
 
-        //  We need to enable physics on the player
-        game.physics.arcade.enable(player);
+        //  Resize our game world to be a 2000 x 2000 square
+        game.world.setBounds(0, 0, 500, 500);
 
-        //  Player physics properties. Give the little guy a slight bounce.
-        player.body.bounce.y = 0.2;
-        player.body.gravity.y = 300;
+        game.physics.enable(player, Phaser.Physics.ARCADE);
+        player.body.drag.set(0.2);
+
+        // устанавливаем ограничение скорости
+        player.body.maxVelocity.setTo(config.player_speed, config.player_speed);
         player.body.collideWorldBounds = true;
 
         //  Our two animations, walking left and right.
-        player.animations.add('left', [6, 15, 24, 33, 42], 8, true);
         player.animations.add('right', [2, 11, 20, 29, 38], 8, true);
-        player.animations.add('top', [0, 7, 13, 19], 9, true);
+        player.animations.add('left', [6, 15, 24, 33, 42], 8, true);
+        player.animations.add('down', [4, 13, 22, 31, 40], 8, true);
+        player.animations.add('up', [0, 9, 18, 27, 36], 8, true);
 
-        //  Our controls.
         cursors = game.input.keyboard.createCursorKeys();
     }
 
     function update() {
 
-        //  Collide the player and the stars with the platforms
-        game.physics.arcade.collide(player, platforms);
-
         game.input.keyboard.onUpCallback = function (e) {
             // These can be checked against Phaser.Keyboard.UP, for example.
             console.log(e.keyCode);
-
-        };
+        }
 
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
+        player.body.velocity.y = 0;
 
         if (cursors.left.isDown)
         {
             //  Move to the left
-            player.body.velocity.x = -150;
-
+            player.body.velocity.x = -config.player_speed;
             player.animations.play('left');
         }
         else if (cursors.right.isDown)
         {
             //  Move to the right
-            player.body.velocity.x = 150;
-
+            player.body.velocity.x = config.player_speed;
             player.animations.play('right');
+        }
+        else if (cursors.down.isDown)
+        {
+            player.body.velocity.y = config.player_speed;
+            player.animations.play('down');
+        }
+        else if (cursors.up.isDown)
+        {
+            player.body.velocity.y = -config.player_speed;
+            player.animations.play('up');
         }
         else
         {
@@ -118,13 +116,7 @@
             player.frame = 4;
 
         }
-        //  Allow the player to jump if they are touching the ground.
 
-        if (cursors.up.isDown && player.body.touching.down)
-        {
-            player.body.velocity.y = -350;
-            player.animations.play('top');
-        }
     }
 
 
