--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
         width: 800,
         height: 600,
         parent: 'phaser-example',
+        customSetting: {
+            preload: preload,
+            create: create,
+            update: update,
+            render: render,
+        },
         physics: {
             default: 'arcade',
             arcade: {
                 debug: true
             }
         },
-        player_speed: 150
+        player_speed: 170,
     };
 
-    let game = new Phaser.Game(config.width, config.height, config.type, '', { preload: preload, create: create, update: update });
+    let game = new Phaser.Game(
+        config.width, config.height, config.type, config.parent, config.customSetting
+    );
 
     function preload() {
         game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
@@ -40,12 +48,12 @@
         game.load.image('sky', 'assets/sky.png');
         game.load.image('ground', 'assets/platform.png');
         game.load.image('star', 'assets/star.png');
-        game.load.spritesheet('humman', './resurs/hummen_go3.png', 37,38);
+        game.load.spritesheet('humman', './resurs/hummen_go3.png', 37,39);
+        //game.load.spritesheet('orc', './resurs/orc.png', 37,38);
 
     }
 
     let player;
-    let platforms;
     let cursors;
 
     function create ()
@@ -55,7 +63,7 @@
         game.add.sprite(0, 0, 'sky');
 
         // The player and its settings
-        player = game.add.sprite(32, 32, 'humman');
+        player = game.add.sprite(320, 220, 'humman');
 
         //  Resize our game world to be a 2000 x 2000 square
         game.world.setBounds(0, 0, 500, 500);
@@ -66,45 +74,46 @@
         // устанавливаем ограничение скорости
         player.body.maxVelocity.setTo(config.player_speed, config.player_speed);
         player.body.collideWorldBounds = true;
+        player.anchor.setTo(0.5, 0.5);
+        game.camera.follow(player);
 
         //  Our two animations, walking left and right.
-        player.animations.add('right', [2, 11, 20, 29, 38], 8, true);
-        player.animations.add('left', [6, 15, 24, 33, 42], 8, true);
-        player.animations.add('down', [4, 13, 22, 31, 40], 8, true);
-        player.animations.add('up', [0, 9, 18, 27, 36], 8, true);
+        player.animations.add('right', [2, 11, 20, 29], 8, true);
+        player.animations.add('left', [6, 15, 24, 33], 8, true);
+        player.animations.add('down', [4, 13, 22, 31], 8, true);
+        player.animations.add('up', [0, 9, 18, 27], 8, true);
 
         cursors = game.input.keyboard.createCursorKeys();
+
+        player.body.allowRotation = false;
     }
 
     function update() {
-
-        game.input.keyboard.onUpCallback = function (e) {
-            // These can be checked against Phaser.Keyboard.UP, for example.
-            console.log(e.keyCode);
-        }
 
         //  Reset the players velocity (movement)
         player.body.velocity.x = 0;
         player.body.velocity.y = 0;
 
-        if (cursors.left.isDown)
+        //player.rotation = game.physics.arcade.angleToPointer(player);
+
+        if (cursors.left.isDown || isUnitGoLeft())
         {
             //  Move to the left
             player.body.velocity.x = -config.player_speed;
             player.animations.play('left');
         }
-        else if (cursors.right.isDown)
+        else if (cursors.right.isDown || isUnitGoRight())
         {
             //  Move to the right
             player.body.velocity.x = config.player_speed;
             player.animations.play('right');
         }
-        else if (cursors.down.isDown)
+        else if (cursors.down.isDown || isUnitGoDown())
         {
             player.body.velocity.y = config.player_speed;
             player.animations.play('down');
         }
-        else if (cursors.up.isDown)
+        else if (cursors.up.isDown || isUnitGoUp())
         {
             player.body.velocity.y = -config.player_speed;
             player.animations.play('up');
@@ -118,6 +127,58 @@
         }
 
     }
+    
+    function isUnitGoUp() {
+        let result = false;
+
+        if(player.y > game.input.activePointer.clientY + 100 && game.input.activePointer.isDown){
+            result = true;
+        }
+
+        return result;
+    }
+
+    function isUnitGoDown() {
+        let result = false;
+
+        if(player.y < game.input.activePointer.clientY -100 && game.input.activePointer.isDown){
+            result = true;
+        }
+
+        return result;
+    }
+
+    function isUnitGoLeft() {
+        let result = false;
+
+        if(player.x < game.input.activePointer.clientX - 100 && game.input.activePointer.isDown){
+            result = true;
+        }
+
+        return result;
+    }
+
+    function isUnitGoRight() {
+        let result = false;
+
+        if(player.x > game.input.activePointer.clientX + 100 && game.input.activePointer.isDown){
+            result = true;
+        }
+
+        return result;
+    }
+
+    function render() {
+
+        game.debug.text("Player position X: " + player.x + ", Player position Y: " + player.y, 30, 102);
+        game.debug.inputInfo(30, 132);
+        //game.debug.cameraInfo(game.camera, 32, 32);  //выводим инфу касательно движений камеры
+
+        //game.debug.text('Active Bullets: ' + player.countLiving() + ' / ' + player.total, 32, 32);
+        //game.debug.spriteInfo(sprite, 32, 450);
+
+    }
+
 
 
 </script>
